force-app/main/default/objects/custom_create371__c/custom_create371__c.object-meta.xml
<CustomObject>
    <label>Custom created object371</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects371</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>