force-app/main/default/objects/custom_create371__c/fields/custom_create_371field520__c.field-meta.xml
<CustomField>
    <fullName>custom_create_371field520__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 371field520</label>
    <type>Checkbox</type>
</CustomField>